Fix code push deployment key.

--- a/AppCenterPOC/android/app/src/main/res/values/strings.xml
+++ b/AppCenterPOC/android/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string moduleConfig="true" name="reactNativeCodePush_androidDeploymentKey"></string>
+    <string moduleConfig="true" name="reactNativeCodePush_androidDeploymentKey">T3p55KMxRlLP2S3r7S-eUZjhPwroSJfTNykJE</string>
     <string name="app_name">AppCenterPOC</string>
     <string name="appCenterAnalytics_whenToEnableAnalytics" moduleConfig="true">ALWAYS_SEND</string>
     <string name="appCenterCrashes_whenToSendCrashes" moduleConfig="true">ALWAYS_SEND</string>
